python-apt (0.8.7) UNRELEASED; urgency=low

  [ Translation updates ]
  * po/es.po: Spanish translation updated by Omar Campagne (closes: #679285)
  * po/ja.po: Japanese translation updated by Kenshi Muto (closes: #679652)

  [ Jakub Wilk ]
  * Fix typos: the the -> the (closes: #679432)

 -- David Prévot <taffit@debian.org>  Sat, 30 Jun 2012 16:50:03 -0400

python-apt (0.8.6) unstable; urgency=low

  [ Michael Vogt ]
  * debian/control:
    - add build-dep for apt (>= 0.9.6) to make test_auth.py test
      work reliable

  [ Julian Andres Klode ]
  * apt/auth.py:
    - Use tempfile.NamedTemporaryFile to create temporary file
    - Use Popen.communicate() instead of stdin, stdout
  * tests/fakeroot-apt-key:
    - exec apt-key, otherwise we ignore the return value
  * debian/control:
    - Build-depend on fakeroot, needed for the apt.auth tests
  * data/templates/Debian.info.in:
    - Add wheezy
    - Add wheezy-updates as Recommended Updates
    - Order wheezy-proposed-updates after wheezy/updates and wheezy-updates
  * po:
    - Fixup the translations for wheezy again

 -- Michael Vogt <mvo@debian.org>  Fri, 29 Jun 2012 15:57:20 +0200

python-apt (0.8.5) unstable; urgency=low

  [ Michael Vogt ]
  * python/cache.cc:
    - ensure that pkgApplyStatus is called when the cache is opened
      (thanks to Sebastian Heinlein for finding this bug), LP: #659438

  [ Stéphane Graber ]
  * data/templates/Ubuntu.info.in:
    - add quantal

  [ Steve Langasek ]
  * utils/get_ubuntu_mirrors_from_lp.py: move this script to python3
  * pre-build.sh: call dpkg-checkbuilddeps with the list of our 
    source-build-dependencies; this may save someone else an hour down the
    line scratching their head over gratuitous test-suite failures...
  
  [ Sebastian Heinlein ]
  * lp:~glatzor/python-apt/auth:
    - this is a port of the software-properties AptAuth module to python-apt
      with some cleanups. It provides a wrapper API for the apt-key command

  [ David Prévot ]